fix blur on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,11 @@
   }
 }
 
+.header-blur {
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px); /* Safari 9+ */
+}
+
 .gasoek-one-regular {
   font-family: "Gasoek One", sans-serif;
   font-weight: 400;
